<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="18dp"
    android:layout_height="match_parent">


    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:drawableTop="@drawable/ic_close_sm"
        android:background="@color/red"
        android:id="@+id/btnCloseDialogRecord"
        />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Show Record state"
        android:id="@+id/txt_record_state"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textColor="#ff000000"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <com.dd.CircularProgressButton
        android:id="@+id/btnWithText"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:textColor="#fff"
        android:layout_below="@id/txt_record_state"
        android:textSize="18sp"
        android:layout_centerInParent="true"
        app:cpb_textComplete="@string/Complate"
        app:cpb_textError="@string/Error"
        app:cpb_textIdle="@string/Upload" />

</RelativeLayout>