<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.example.lordmahdi.crime_report_app.registration.RagisterFrag2">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton
            android:layout_width="@dimen/profile_width"
            android:layout_height="@dimen/profile_width"
            android:src="@drawable/ic_account"
            android:scaleType="fitXY"
            android:id="@+id/fragment_registration_step2_profile"
            android:layout_marginBottom="@dimen/input_margin_lg"/>

        <EditText
            android:id="@+id/fragment_registration_step2_phone"
            android:layout_width="@dimen/input_width"
            android:inputType="phone"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:textColor="@color/hintColor"
            android:layout_margin="@dimen/margin_top"
            android:padding="@dimen/padding_dimen"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColorHint="@color/hintColor"
            android:background="@drawable/input_selector_primary"

            />

        <EditText android:id="@+id/fragment_registration_step2_Email"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_top"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_dimen"
            android:textColor="@color/hintColor"
            android:hint="Email"
            android:textColorHint="@color/hintColor"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/input_selector_primary"
            />

        <EditText android:id="@+id/fragment_registration_step2_password"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_top"
            android:inputType="textPassword"
            android:padding="@dimen/padding_dimen"
            android:textColor="@color/hintColor"
            android:hint="@string/hint_password"
            android:textColorHint="@color/hintColor"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/input_selector_primary"
            />



        <Button
            android:id="@+id/fragment_registration_step2_btn_Done"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_dimen"
            android:layout_margin="@dimen/margin_top"
            android:text="@string/done_btn"
            android:background="@drawable/btn_selector"
            android:textColor="@color/fontColor"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>


</RelativeLayout>
